--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(BigArithmetic)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(BigArithmetic main.cpp BA.h BA.cpp)
+add_executable(BigArithmetic main.cpp BA.h BA.cpp BAFunctions.h)
 
 add_subdirectory(Tests)
